--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Vite + React</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/s-k3nyyy-phase4-project-frontend-client.github.io/vite.svg" />
 
     <!-- Font Awesome Icons -->
     <link
@@ -32,7 +32,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <!-- Vite HMR support -->
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" crossorigin src="/s-k3nyyy-phase4-project-frontend-client.github.io/assets/main-Cjwk3ACW.js"></script>
+    <link rel="stylesheet" crossorigin href="/s-k3nyyy-phase4-project-frontend-client.github.io/assets/main-DUrOBjin.css">
   </head>
   <body>
     <div id="root"></div>
