--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-
-    <!-- Vite HMR support -->
-    <script type="module" src="/src/main.jsx"></script>
   </head>
   <body>
     <div id="root"></div>
+    <!-- Vite will automatically inject the correct script tags here -->
   </body>
 </html>
