--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,9 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-
-    <!-- Vite HMR support -->
-    <script type="module" crossorigin src="/s-k3nyyy-phase4-project-frontend-client.github.io/assets/main-Cjwk3ACW.js"></script>
-    <link rel="stylesheet" crossorigin href="/s-k3nyyy-phase4-project-frontend-client.github.io/assets/main-DUrOBjin.css">
   </head>
   <body>
     <div id="root"></div>
+    <!-- Vite will automatically inject the correct script tags here -->
   </body>
 </html>
