--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vite + React</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/s-k3nyyy-phase4-project-frontend-client.github.io/vite.svg" />
 
     <!-- Font Awesome Icons -->
     <link
